package com.example.task2.model;

public interface IFactory  {

    public myShape createshape(int numberOfSides);

    public myShape creshape(String name);

}
