@startuml

title __MODEL's Class Diagram__\n


        class com.example.task2.model.Factory {
            + createshape()
        }

  


        interface com.example.task2.model.IFactory {
            {abstract} + createshape()
        }

  


        class com.example.task2.model.myAngle {
            - length : double
            + draw()
            + myAngle()
            + myAngle()
        }

  


        class com.example.task2.model.myCircle {
            - length : double
            - width : double
            + draw()
            + myCircle()
            + myCircle()
        }

  

        class com.example.task2.model.myRect {
            ~ length : double
            ~ width : double
            + draw()
            + myRect()
            + myRect()
            + toString()
        }

  


        abstract class com.example.task2.model.myShape {
            # color : Color
            # x : double
            # y : double
            {abstract} + draw()
            + getColor()
            + myShape()
            + myShape()
            + setColor()
        }

  


        class com.example.task2.model.myTriangle {
            + draw()
            + myTriangle()
            + myTriangle()
        }

  

  com.example.task2.model.Factory .up.|> com.example.task2.model.IFactory
  com.example.task2.model.myAngle -up-|> com.example.task2.model.myShape
  com.example.task2.model.myCircle -up-|> com.example.task2.model.myShape
  com.example.task2.model.myRect -up-|> com.example.task2.model.myShape
  com.example.task2.model.myTriangle -up-|> com.example.task2.model.myShape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
